...
        currentIndex: tabsRouter.activeIndex,
        onTap: tabsRouter.setActiveIndex,
        items: const [
          BottomNavigationBarItem(icon: Icon(Icons.map), label: 'Mapa'),
          BottomNavigationBarItem(icon: Icon(Icons.emoji_events), label: 'Osiągnięcia'),
          BottomNavigationBarItem(
            icon: Icon(Icons.people, key: ValueKey('bottom_nav_friends')),
            label: 'Znajomi',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.person, key: ValueKey('bottom_nav_profile')),
            label: 'Profil',
          ),
        ],
      ),
    );
  }
...
