...
    try {
      await _difficultMultipartService.addTrace(event.traceDialogResult.media, dto);
      _refreshPanelController.add(null);
      produceSideEffect(const ShouldRequestUpdateSideEffect());
    } catch (e, st) {
      if (!isClosed) {
        produceSideEffect(ErrorSideEffect('Nie udało się dodać śladu'));
      }
      debugPrint('Failed to add trace: $e\n$st');
    } finally {
      if (!isClosed) {
        emit(state.copyWith(isAddingTrace: false));
      }
...
