...
                                        ),
                                      ),
                                    ],
                                  ),
                                FriendshipStatus.noRelation => BigBlackButton(
                                    onTap: _sendFriendRequest,
                                    label: 'Zaproś do znajomych',
                                    icon: Icon(Icons.person_add),
                                  ),
                                FriendshipStatus.invitationSent => BigBlackButton(
                                    onTap: _cancelFriendRequest,
                                    label: 'Anuluj zaproszenie',
                                    icon: Icon(Icons.person_remove),
                                  ),
                              },
                      ),
                    ),
                  ),
...
