...
                  child: AppBar(
                    bottom: TabBar(
                      controller: _tabController,
                      tabs: [
                        Tab(text: 'Znajomi'),
                        Tab(text: 'Zaproszenia'),
                        Tab(text: 'Szukaj'),
                      ],
                    ),
                  ),
                ),
                body: TabBarView(
                  controller: _tabController,
...
